--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
              }
              */
             h1::after{
-                content: url(https://media.tenor.com/IYI9fQ41PWQAAAAj/yolande.gif);
+                content: url(https://media.tenor.com/WLf29fHjuAkAAAAj/wumpus-halloween.gif);
             }
             /* 8.CSS  Pesudo class selector (:)
              element:Selector{
                  property:valu;
              }*/
-             div#c1:hover{
+            div#c1:hover{
                 background:green;
-             }
+            }
         </style>
     </head>
     <body>
         <div> element selector </div>
         <span id="a1">CSS Id Selector # </span>
         <span class="b1">CSS Class Selector</span>
-        <a href="https://oklabs.in">CSS Attribute Selector</a>
+        <a href="https://www.google.com">CSS Attribute Selector</a>
         <h1> css pesudo element :: </h1>
-        <div id="c1"> css pesudo class Selector</div>
+        <div id="c1"> CSS Pesudo Class Selector</div>
     </body>
 </html>
